kustomize/ai-recipe/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airecipe
  namespace: airecipe
  labels:
    app: airecipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airecipe
  template:
    metadata:
      labels:
        app: airecipe
    spec:
      containers:
      - name: airecipe
        image: docker.io/bahn1075/airecipe:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "1024Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
